--- a/src/components/Header/SubHeader.scss
+++ b/src/components/Header/SubHeader.scss
@@ -13,3 +13,29 @@
         }
     }
 }
+
+
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+
+}
+@media (max-width: 576px) {
+    .subheader{
+        background-color: white;
+        padding:1% 3%;
+        .itemcontainer{
+            text-align: center;
+            margin: 5% 0;
+            img{
+                width: 10vw;
+            }
+            h5{
+                text-align: center;
+            }
+        }
+    }
+}
+
