--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -6,4 +6,63 @@
         padding:1%;
         background-color: white;
     }
+    .icon{
+        font-size: 1.5em;
+    }
+    .discountsection{
+      img{
+          width: 70vw;
+          display: block;
+          margin: auto;
+          opacity: 1;
+      }
+        .row{
+            position: absolute;
+            top:120%;
+            width: 100%;
+            padding:0 20%;
+            div{
+            background-color: white;
+            margin: 1%;
+            border-radius: 10px;
+            text-align: center;
+            padding:3% 1%;
+                h1{
+                    font-size: 1.5em;
+                }
+            }
+        }
+    }
+ 
+    .trending{
+        margin:10% 0;
+        padding:1%;
+        background-color: white;
+    }
 }
+
+
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+
+}
+@media (max-width: 576px) {
+    .home{
+        .dod{
+            margin:5% 0;
+            padding:5% 0;
+            background-color: white;
+            h2{
+                text-align: center;
+            }
+        }
+        .icon{
+            font-size: 1.5em;
+        }
+    }
+    
+}
+
