--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -1,1 +1,97 @@
 @import  "../../App.scss";
+.item{
+    text-align: right;
+    margin: 8% 2%;
+    .discount{
+        background-color: black;
+        color: white;
+        padding:10% 7%;
+        border-radius: 50%;
+        align-self: flex-end;
+        font-weight: 500;
+   }
+   .info{
+       padding:10% 3%;
+       text-align: center;
+       border-radius: 5px;
+       img{
+           width: 7vw;
+           margin-bottom: 10%;
+
+       }
+       p{
+           font-weight: bold;
+       }
+       
+   }
+   .price{
+    background-color: black;
+    color: white;
+    padding:3%;
+    border-radius: 30px;
+    p{
+        text-align: center;
+        .mrp{
+            text-decoration: line-through;
+            color: grey;
+            margin-right: 3%;
+        }
+        .total{
+            font-weight: bold;
+        }
+    }
+   }
+}
+
+
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+
+}
+@media (max-width: 576px) {
+    .item{
+        text-align: right;
+        margin: 15% 2%;
+        .discount{
+            background-color: black;
+            color: white;
+            padding:10% 7%;
+            border-radius: 50%;
+            align-self: flex-end;
+            font-weight: 500;
+       }
+       .info{
+           padding:10% 3%;
+           text-align: center;
+           border-radius: 5px;
+           img{
+               width: 20vw;
+    
+           }
+           
+       }
+       .price{
+        background-color: black;
+        color: white;
+        padding:3%;
+        border-radius: 30px;
+        p{
+            text-align: center;
+            .mrp{
+                text-decoration: line-through;
+                color: grey;
+                margin-right: 3%;
+            }
+            .total{
+                font-weight: bold;
+            }
+        }
+       }
+    }
+    
+}
+
+
