--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,48 @@
 @import  "../../App.scss";
 
 .footer{
+    padding:3% 1%;
     background: black;
     color: white;
+    
+    img{
+        width: 15vw;
+    }
+    p{
+        color: grey;
+    }
+    .subtitle{
+        color: grey;
+        margin-top: 2%;
+        margin-left: 5%;
+    }
+    h2{
+        font-weight: 500;
+    }
+    .link{
+        color: grey !important;
+    }
 }
+
+
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+
+}
+@media (max-width: 576px) {
+    .footer{
+        img{
+            width: 28vw;
+        }
+        .subtitle{
+            margin-top: 10%;
+        }
+      div{
+          margin-top: 8%;
+      }
+    }
+}
+
