--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,7 @@
             width: 100%;
             border-radius: 5px;
             border: none;
-            padding:1% 2%;
+            padding:.8% 2%;
         }
         input:focus{
             outline: none;
