--- a/src/components/Header/SubHeader.scss
+++ b/src/components/Header/SubHeader.scss
@@ -2,14 +2,15 @@
 
 .subheader{
     background-color: white;
-    padding:1% 3%;
+    padding:1% 0%;
     .itemcontainer{
         text-align: center;
         img{
-            width: 3vw;
+            width: 2vw;
         }
         h5{
             text-align: center;
+            font-size: 1em;
         }
     }
 }
