--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,7 +5,7 @@
     background: black;
     color: white;
     
-    img{
+    .logo{
         width: 15vw;
     }
     p{
@@ -14,6 +14,9 @@
     .subtitle{
         color: grey;
         margin-top: 2%;
+        margin-left: 5%;
+    }
+    .startupindia{
         margin-left: 5%;
     }
     h2{
