--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,14 +9,19 @@
             width: 12vw;
             margin-left: 5%;
         }
+        p{
+            color: white;
+            margin:0 50px;
+        }
     }
     .inputdiv{
         width: 70%;
         input{
-            width: 100%;
+            width: 80%;
             border-radius: 5px;
             border: none;
-            padding:.6% 2%;
+            padding:1.5% 2%;
+            margin-left: 7%;
         }
         input:focus{
             outline: none;
