--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+$primary:#FE6003;
+.greytext{
+  color: grey;
+}
+
 $primary-font:'Montserrat', sans-serif;
 $secondary-font:'Roboto', sans-serif;
 
