--- a/src/components/Cart/Checkout.scss
+++ b/src/components/Cart/Checkout.scss
@@ -1,28 +1,51 @@
 @import  "../../App.scss";
 
-
 .checkout{
+    border-radius: 5px;
+}
+.paymentdetails{
     background-color: white;
     margin: 2%;
-    width: 40%;
-    padding:1% 2%;
+    width: 100%;
+    padding:2% 3%;
     .pg{
-        padding:3%;
+        padding:2%;
+        margin: 3% 0;
         background-color: rgb(245, 245, 245);
     }
     .pg:hover{
         background-color:#ff5e003b ;
-        color: balck;
+        color: black;
         transform: scale(1.1);
         transition: .2s;
         cursor: pointer;
+        border: 1px solid $primary;
+        border-radius: 5px;
     }
     .active{
         background-color:#ff5e003b ;
-        color: balck;
+        color: black;
+        border: 1px solid $primary;
+        border-radius: 5px;
         transform: scale(1.1);
     }
     .btn{
         margin: 5% 0;
+    }
+}
+
+.totaldiv{
+    background: white;
+    margin: 2%;
+    padding:2%;
+    border-radius: 5px;
+    height: 100%;
+    h5{
+        margin-bottom: 10%;
+    }
+    .total{
+        text-align: right;
+        font-size: 1.5em;
+        font-weight: bold;
     }
 }
