--- a/src/components/Header/SubHeader.scss
+++ b/src/components/Header/SubHeader.scss
@@ -5,6 +5,7 @@
     padding:1% 0%;
     .itemcontainer{
         text-align: center;
+        color: black !important;
         img{
             width: 2vw;
         }
