--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -2,6 +2,7 @@
 .item{
     margin: 8% 2%;
     border-radius: 5px;
+    height: 90%;
    .discount{
        background: $primary;
        color: white;
