--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,6 +33,12 @@
         }
         padding-right: 2%;
     }
+    .icon-bg{
+        background-color: rgb(68, 68, 68);
+    }
+    .icon-bg:hover{
+        background-color: rgb(146, 146, 146);
+    }
 }
 
 
