--- a/src/components/Item/ItemDetail.scss
+++ b/src/components/Item/ItemDetail.scss
@@ -55,6 +55,13 @@
             border-radius: 5px;
         }
     }
+    
+    .count{
+        margin: 0 2%;
+        h2{
+            font-size: 1.5em;
+        }
+    }
 }
 .descriptionreviewtab{
     margin: 1% 5%;
