--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -17,6 +17,7 @@
     }
     .cart-item{
         padding:2% 1%;
+        margin: 3% 0 !important;
         background-color: white;
        .imgdiv{
            text-align: center;
