--- a/src/components/Dashboard/MyProfile/MyProfile.scss
+++ b/src/components/Dashboard/MyProfile/MyProfile.scss
@@ -4,3 +4,34 @@
 .dashboard-container{
     margin: 2% 5%;
 }
+
+.section2{
+    margin: 1% 0;
+    background-color: white;
+    div{
+        padding:2%;
+        border-radius: 5px;
+        margin: 2% 0;
+        .key{
+            color: #a1a1a1;
+        }
+        .value{
+
+        }
+    }
+}
+.section1{
+    .cont{
+        background-color: white;
+        border-radius: 5px;
+        padding:2%;
+        h3{
+            color: $primary;
+        }
+        p{
+            //color: #a1a1a1;
+            font-weight: bold;
+
+        }
+    }
+}
