--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 $primary:#FE6003;
-.greytext{
-  color: grey;
+.greyspan{
+  color: #a1a1a1;
 }
-
+//₹
 $primary-font:'Montserrat', sans-serif;
 $secondary-font:'Roboto', sans-serif;
 
@@ -14,7 +14,7 @@ p,span{
 }
 
 body{
-  background-color: #fafafa;
+  background-color: #F5F9FC;
 }
 
 
