--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -3,10 +3,10 @@
 .home{
     .carousel1{
         width: 100vw;
-        margin: 2% 0;
+        margin: 0 !important;
     }
     .dod{
-        margin:2% 0;
+        margin-bottom: 2%;
         padding:1%;
         background-color: white;
     }
