--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -3,12 +3,18 @@
     margin: 8% 2%;
     border-radius: 5px;
     height: 90%;
+    padding-top: 5%;
+    padding-bottom: 10%;
+    
+    
    .discount{
-       background: $primary;
-       color: white;
-       padding:2%;
-       border-radius: 0px 0px 5px 0px;
+       background: #fe5f0325;
        font-weight: bold;
+       border: 1px solid $primary;
+       padding: 2%;
+       margin: 5%;
+       border-radius: 3px;
+
    }
    .info{
        padding:4% 5%;
@@ -16,28 +22,42 @@
            margin-top: 10%;
            font-weight: bold;
            margin-bottom: 0;
-           font-size: 1.1em;
+           font-size: 1em;
        }
        .rating{
            margin: 2% 0;
        }
        .mrp{
            text-decoration: line-through;
-           color: grey;
+           color: #a1a1a1;
        }
        .total{
            font-weight: bold;
-           font-size: 1.2em;
+           font-size: 1.5em;
            color: $primary;
+        //    background: -webkit-linear-gradient($primary, rgb(194, 87, 0));
+        //    -webkit-background-clip: text;
+        //    -webkit-text-fill-color: transparent;
+       }
+       .off{
+           color: black;
+           font-weight: bold;
+           padding:2%;
        }
    }
    img{
-       width: 55%;
+       width: 100%;
        display: block;
        margin: auto;
    }
    
    
+}
+.item:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: .2s;
+    background: #fe5f0307;
 }
 
 
