--- a/src/components/Cart/Checkout.scss
+++ b/src/components/Cart/Checkout.scss
@@ -8,6 +8,10 @@
     margin: 2%;
     width: 100%;
     padding:2% 5%;
+    img{
+        width: 10vw;
+        margin-bottom: 2%;
+    }
     .pg{
         padding:2%;
         margin: 3% 0;
