--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,14 +35,16 @@
         padding-right: 2%;
     }
     .icon-bg{
-        background-color: rgb(68, 68, 68);
+        background-color: #F5F9FC;
+        color: black;
     }
     .icon-bg:hover{
         background-color: rgb(146, 146, 146);
     }
     .icon-bg-cart{
-        background-color: rgb(68, 68, 68);
+        background-color: #F5F9FC;
         margin-right: 15px;
+        color: black;
     }
     .icon-bg-cart:hover{
         background-color: rgb(146, 146, 146);
