--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -8,7 +8,7 @@
     .dod{
         margin-bottom: 2%;
         padding:1%;
-        background-color: white;
+        background-color: #F5F9FC;
     }
     .icon{
         font-size: 1.5em;
