--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -21,7 +21,8 @@
        padding:4% 5%;
        .heading{
            margin-top: 10%;
-           font-weight: bold;
+           font-weight: 500;
+           
            margin-bottom: 0;
            font-size: 1em;
        }
@@ -41,7 +42,7 @@
         //    -webkit-text-fill-color: transparent;
        }
        .off{
-           color: black;
+           color: green;
            font-weight: bold;
            padding:2%;
        }
