--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -8,7 +8,7 @@
     .dod{
         margin-bottom: 2%;
         padding:1%;
-        background-color: #F5F9FC;
+        background-color: $secondary;
     }
     .icon{
         font-size: 1.5em;
@@ -48,13 +48,13 @@
         margin-top: 2%;
         margin-bottom: 2%;
         padding:1%;
-        background-color: white;
+        background-color: $secondary;
     }
     .mostbought{
         margin-top: 2%;
         margin-bottom: 10%;
         padding:1%;
-        background-color: white;
+        background-color: $secondary;
     }
 }
 
