--- a/src/components/Item/ItemDetail.scss
+++ b/src/components/Item/ItemDetail.scss
@@ -46,6 +46,9 @@
     .availableoffers{
         margin-top: 5%;
         margin-bottom: 1%;
+        img{
+            width: 1.5vw;
+        }
         p{
             margin: 0 !important;
         }
