--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -40,7 +40,8 @@
             margin-bottom: 2%;
         }
         .c2{
-            width: 100vw;
+            width: 100%;
+            height: 100%;
         }
     }
 
