--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -1,6 +1,6 @@
 @import  "../../App.scss";
 .item{
-    background-color: white;
+    background-color: white !important;
     margin: 8% 2%;
     border-radius: 5px;
     height: 90%;
