--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,59 +1,118 @@
 @import  "../../App.scss";
 
-.cart{
-    .emptycart{
-        img{
-            display: block;
-            margin: auto;
-            width: 10vw;
-            margin-top: 5%;
-        }
-        h1{
-            text-align: center;
-        }
-    }
-    .cart-container{
-        margin: 2% 5%;
-    }
-    .cart-item{
-        padding:2% 1%;
-        margin: 3% 0 !important;
+.cart-container{
+    margin: 0 2%;
+    .product{
         background-color: white;
-       .imgdiv{
-           text-align: center;
-        img{
-            width: 7vw;
+        .price-container{
+            margin: 0 !important;
+            padding: 3% 0 !important;
         }
-       }
-       .closequantity{
-           text-align: right;
-           .row{
-               margin-top: 10%;
-               span{
-                   font-size: 1.1em;
-                   font-weight: bold;
-               }
-               .iconbutton{
-                   font-size: 1.5em;
-               }
-           }
-       }
-
+        img{
+            width: 100%;
+        }
+        .price{
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+        .mrp{
+            color: #a1a1a1;
+            text-decoration: line-through;
+            margin: 0 1%;
+        }
+        .poff{
+            font-weight: bold;
+            color: green;
+        }
     }
-
     .total-container{
         background-color: white;
-        padding:2%;
+        padding: 2% 3%;
         p{
             font-size: 1.5em;
-            font-weight: 300;
-            .total{
-                font-weight: 600;
-            }
-            
-        }
-        .btn{
-            margin-top: 5%;
         }
     }
 }
+
+// .cart{
+//     .emptycart{
+//         img{
+//             display: block;
+//             margin: auto;
+//             width: 10vw;
+//             margin-top: 5%;
+//         }
+//         h1{
+//             text-align: center;
+//         }
+//     }
+//     .cart-container{
+//         margin: 2% 5%;
+//     }
+//     .cart-item{
+//         padding:2% 1%;
+//         margin: 3% 0 !important;
+//         background-color: white;
+//        .imgdiv{
+//            text-align: center;
+//         img{
+//             width: 7vw;
+//         }
+//        }
+//        .closequantity{
+//            text-align: right;
+//            .row{
+//                margin-top: 10%;
+//                span{
+//                    font-size: 1.1em;
+//                    font-weight: bold;
+//                }
+//                .iconbutton{
+//                    font-size: 1.5em;
+//                }
+//            }
+//        }
+
+//     }
+
+//     .total-container{
+//         background-color: white;
+//         padding:2%;
+//         p{
+//             font-size: 1.5em;
+//             font-weight: 300;
+//             .total{
+//                 font-weight: 600;
+//             }
+            
+//         }
+//         .btn{
+//             margin-top: 5%;
+//         }
+//     }
+// }
+
+
+// @media (max-width: 992px) {
+
+// }
+// @media (max-width: 768px) {
+
+
+// }
+// @media (max-width: 576px) {
+//     .cart-container{
+//         .cart-item{
+//             img{
+//                 width: 20vw !important;
+//             }
+//             .productdetail{
+//                 .pricerow{
+//                     margin-top: 5% !important;
+//                 }
+//             }
+    
+//         }
+//     }
+// }
+
