--- a/src/components/Header/SubHeader.scss
+++ b/src/components/Header/SubHeader.scss
@@ -7,7 +7,7 @@
         text-align: center;
         color: black !important;
         img{
-            width: 2vw;
+            width: 80%;
         }
         h5{
             text-align: center;
@@ -18,10 +18,35 @@
 
 
 @media (max-width: 992px) {
-
+    .subheader{
+        background-color: white;
+        padding:1% 3%;
+        .itemcontainer{
+            text-align: center;
+            margin: 2% 0 !important;
+            img{
+            }
+            h5{
+                text-align: center;
+            }
+        }
+    }
 }
 @media (max-width: 768px) {
-
+    .subheader{
+        background-color: white;
+        padding:1% 3%;
+        .itemcontainer{
+            text-align: center;
+            margin: 2% 0 !important;
+            img{
+                
+            }
+            h5{
+                text-align: center;
+            }
+        }
+    }
 
 }
 @media (max-width: 576px) {
@@ -30,9 +55,9 @@
         padding:1% 3%;
         .itemcontainer{
             text-align: center;
-            margin: 5% 0;
+            margin: 2% 0 !important;
             img{
-                width: 10vw;
+                
             }
             h5{
                 text-align: center;
