--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -48,3 +48,36 @@
       }
    
 }
+
+
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+
+}
+@media (max-width: 576px) {
+    .authcontainer{
+        width: 80%;
+        }
+    
+    .otp{
+        width: 80%;
+        text-align: center;
+        padding:15% 3%;
+        section{
+            margin: 8% 0;
+        }
+        .otpinput{
+            width: 1.5em !important;
+            height: 4rem;
+            margin: 0 .8rem;
+            font-size: 2rem;
+            border-radius: 5px;
+            border: 2px solid #cccf;
+          }
+       
+    }
+}
+
