--- a/src/components/Cart/Checkout.scss
+++ b/src/components/Cart/Checkout.scss
@@ -38,7 +38,7 @@
     }
 }
 
-.col-3{
+.col-12{
     height: 100%;
     margin: 2%;
 
@@ -64,4 +64,16 @@
         background: white;
         padding:2%;
     }
+}
+
+
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+
+}
+@media (max-width: 576px) {
+   
 }
