--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -32,19 +32,25 @@
 }
 
 .otp{
-    width: 40%;
+    width: 45%;
     text-align: center;
-    padding:5% 10%;
-    section{
-        margin: 8% 0;
+  
+    .otpcontainer{
+        width: 100%;
+        margin: 8% 2%;
+        padding: 0 10%;
+        justify-content: space-around;
     }
     .otpinput{
-        width: 1.5em !important;
-        height: 4rem;
-        margin: 0 .8rem;
-        font-size: 2rem;
-        border-radius: 5px;
-        border: 2px solid #cccf;
+        width: 6vh !important;
+        height: 7vh !important;
+        margin: 0 10px;
+        font-size: 1.5em;
+        // width: 50% !important;
+        // height: 120%;
+        // font-size: 2rem;
+         border-radius: 5px;
+         border: 2px solid #cccf;
       }
    
 }
@@ -62,22 +68,29 @@
         width: 80%;
         }
     
-    .otp{
-        width: 80%;
-        text-align: center;
-        padding:15% 3%;
-        section{
-            margin: 8% 0;
+        .otp{
+            margin-top: 15%;
+            width: 100%;
+            text-align: center;
+          
+            .otpcontainer{
+                width: 100%;
+                margin: 8% 2%;
+                padding: 0 10%;
+                justify-content: space-around;
+            }
+            .otpinput{
+                width: 5vh !important;
+                height: 5vh !important;
+                margin: 0 10px;
+                font-size: 1.5em;
+                // width: 50% !important;
+                // height: 120%;
+                // font-size: 2rem;
+                 border-radius: 5px;
+                 border: 2px solid #cccf;
+              }
+           
         }
-        .otpinput{
-            width: 1.5em !important;
-            height: 4rem;
-            margin: 0 .8rem;
-            font-size: 2rem;
-            border-radius: 5px;
-            border: 2px solid #cccf;
-          }
-       
-    }
 }
 
