--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,5 +1,15 @@
 @import  "../../App.scss";
-
+.emptycart{
+    img{
+        display: block;
+        margin: auto;
+        width: 10vw;
+        margin-top: 5%;
+    }
+    h1{
+        text-align: center;
+    }
+}
 .cart-container{
     margin: 0 2%;
     .product{
@@ -35,17 +45,7 @@
 }
 
 // .cart{
-//     .emptycart{
-//         img{
-//             display: block;
-//             margin: auto;
-//             width: 10vw;
-//             margin-top: 5%;
-//         }
-//         h1{
-//             text-align: center;
-//         }
-//     }
+
 //     .cart-container{
 //         margin: 2% 5%;
 //     }
