--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ $primary-font:'Montserrat', sans-serif;
 $secondary-font:'Roboto', sans-serif;
 
 h1,h2,h3,h5{
-  font-family: $primary-font;
+  font-family: $secondary-font;
 }
 p,span,blockquote,input{
   font-family: $secondary-font;
